--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background-color: #222121;
 
 }
-h1{
+h2{
     font-size: 20px;
     color: aliceblue;
     
@@ -18,5 +18,6 @@ h1{
 .cards{
     margin-top: 20px;
     border: 1px solid gray;
-    background-color: white;
+    background-color: black;
+    color: white;
 }
